- Semantics of "match t with" changed: if a clause returns a
  tactic, it is now applied to the current goal. If it fails, the next
  clause or next matching subterm is tried (i.e. it behaves as "match
  goal with").
- New modifier "lazy" (TODO) for "match t with" and "match goal with" telling
  to delay the evaluation of tactic expression.

Tactics

- Added "clear - id" to clear all hypotheses except the ones depending in id.
- Added "dependent rewrite term" and "dependent rewrite term in hyp" (doc TODO)
- The argument of Declare Left Step and Declare Right Step is now a term
  (it used to be a reference) (doc TODO)
- Omega now handles arbitrary precision integers
- Idtac can now be left implicit in a [...|...] construct: for instance, 
  [ foo | | bar ] stands for [ foo | idtac | bar ]. (doc TODO). 
- "Tactic Notation" extended to allow notations of tacticals (doc TODO).

Modules

- Added "Locate Module qualid" to get the full path of a module.
- Module/Declare Module syntax made more uniform (doc TODO)
- Added syntactic sugar "Declare Module Export/Import" and
  "Module Export/Import" (doc TODO)
- Added syntactic sugar "Module M(Export/Import X Y: T)" and
  "Module Type M(Export/Import X Y: T)"
  (only for interactive definitions) (doc TODO)
- Construct "with" generalized to module paths:
   T with (Definition|Module) M1.M2....Mn.l := l'.  (doc TODO)

Notations

- "format" option aware of recursive notations

Library

- Few improvements in ZArith potentially exceptionally breaking the
  compatibility (useless hypothesys of Zgt_square_simpl and
  Zlt_square_simpl removed; fixed names mentioning letter O instead of
  digit 0; weaken premises in Z_lt_induction)

Changes from V8.0beta to V8.0
=============================

Vernacular commands

- New option "Set Printing All" to deactivate all high-level forms of
  printing (implicit arguments, coercions, destructing let,
  if-then-else, notations, projections)